--- a/portfolio/labs/lab02/index.html
+++ b/portfolio/labs/lab02/index.html
@@ -12,8 +12,16 @@
 </head>
 
 <body>
+    <h1>作業二</h1>
   <div>
-  	<p>作業二</p>
+  	輸入一串漢字: <input value="董秉霖" id="in1">
+  </div>
+
+  <div id="info3">
+      
+  </div>
+  <div id="info1">
+      
   </div>
 </body>
 
